
* There are now options (by upgrade configuration file) how to upgrade from an
  PG stack running in SCL (Software Collections)

* documentation README.rpm-dist is generated from docbook sources

* The sysvinit support should be OK finally, sysvinit system is now
  automatically detected without --with-sysvinit configure option.

* The starting timeout is now configurable via PGSTARTTIMEOUT.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 2.0 version

* With configre --with-sysvinit we are able to install sysvinit
  configuration instead of systemd.

* For systemd systems, the "legacy" scripts for 'service postgresql initdb'
  and 'service postgresql upgrade' are installed.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 1.0 version

* The postgresql-check-db-dir is now more strict to admin's configuration
  and tries to avoid future incompatibilities by warning about the
  /etc/systemd/system/postgresql@instance.service.d/ non-existence.
  Idea by Honza Horák.

* The /etc/postgresql/* path is not used for configuration as it does not
  conform systemd's intentions, see the thread:
  http://www.spinics.net/lists/fedora-devel/msg200450.html .  We encourage
  users to configure via postgresql.service.d/ drop-in directory.

* postgresql-setup is now able to (the very ugly way, though) to read
  environment variable setup from systemd's environment files specified
  via EnvironmentFile= statement (reminded by private rhbz#1135611).

* postgresql-setup now detects whether systemd configuration changed
  while the `systemctl daemon-reload` was not done yet.  Without
  daemon-reload, running postgresql-setup could lead to unexpected results.

* When the --new-systemd-unit (together with --unit & --port & --datadir) is
  given, postgresql-setup is now able to generate very simple drop-in
  configuration file - so instantiating another PostgreSQL server may be
  done by single command.
